finish styling header

--- a/index.html
+++ b/index.html
@@ -14,21 +14,27 @@
 <body class="theme--default">
     
         <main class="weather-card">
+
             <section class="weather-card__header">
+
                 <div class="weather-card__now">
-                    <h2 class="weather-card">Today </h2>
-                    <a href="#!" class="dropdown-menu">
+
+                    <h2 class="weather-card__title">Today </h2>
+
+                    <a href="#!" class="weather-card__dropdown-menu">
                         <img src="img/tech_icons/numba.svg" alt="">
                     </a>
+
                 </div>
 
                 <div class="weather-card__temp">
 
-                    <img src="img/weater_icons/double_cloud.svg" alt="cloud" class="weather-card__icon">
+                    <img src="img/weather_icons/double_cloud.svg" alt="cloud" class="weather-card__icon">
                 
-                    <h1 class="weather-card__title">25°</h1>
+                    <h1 class="weather-card__temp--title">25°</h1>
 
                 </div>
+
              <div class="weather-card__day">
 
                  <p class="weather-card__desc">Cloudy</p>
@@ -51,70 +57,70 @@
                     <li class="mini-forecast">
                         <h4>Now</h4>
                         <span>
-                            <img src="img/weater_icons/mini_double_cloud.svg" alt="">
+                            <img src="img/weather_icons/mini_double_cloud.svg" alt="">
                         </span>
                         25°
                     </li>  
                      <li class="mini-forecast">
                         <h4>2 AM</h4>
                         <span>
-                            <img src="img/weater_icons/mini-double_cloud.svg" alt="">
+                            <img src="img/weather_icons/mini_double_cloud.svg" alt="">
                         </span>
                         25°
                     </li>  
                      <li class="mini-forecast">
                         <h4>3 AM</h4>
                         <span>
-                            <img src="img/weater_icons/mini-double_cloud.svg" alt="">
+                            <img src="img/weather_icons/mini_double_cloud.svg" alt="">
                         </span>
                         25°
                     </li>  
                      <li class="mini-forecast">
                         <h4>4 AM</h4>
                         <span>
-                            <img src="img/weater_icons/mini-double_cloud.svg" alt="">
+                            <img src="img/weather_icons/mini_double_cloud.svg" alt="">
                         </span>
                         25°
                     </li>  
                      <li class="mini-forecast">
                         <h4>5 AM</h4>
                         <span>
-                            <img src="img/weater_icons/mini-double_cloud.svg" alt="">
+                            <img src="img/weather_icons/mini_double_cloud.svg" alt="">
                         </span>
                         25°
                     </li>  
                      <li class="mini-forecast">
                         <h4>6 AM</h4>
                         <span>
-                            <img src="img/weater_icons/mini-double_cloud.svg" alt="">
+                            <img src="img/weather_icons/mini_double_cloud.svg" alt="">
                         </span>
                         25°
                     </li>  
                      <li class="mini-forecast">
                         <h4>7 AM</h4>
                         <span>
-                            <img src="img/weater_icons/mini-double_cloud.svg" alt="">
+                            <img src="img/weather_icons/mini_double_cloud.svg" alt="">
                         </span>
                         25°
                     </li>  
                      <li class="mini-forecast">
                         <h4>8 AM</h4>
                         <span>
-                            <img src="img/weater_icons/mini-double_cloud.svg" alt="">
+                            <img src="img/weather_icons/mini_double_cloud.svg" alt="">
                         </span>
                         25°
                     </li>  
                      <li class="mini-forecast">
                         <h4>9 AM</h4>
                         <span>
-                            <img src="img/weater_icons/mini-double_cloud.svg" alt="">
+                            <img src="img/weather_icons/mini_double_cloud.svg" alt="">
                         </span>
                         25°
                     </li>  
                      <li class="mini-forecast">
                         <h4>10 AM</h4>
                         <span>
-                            <img src="img/weater_icons/mini-double_cloud.svg" alt="">
+                            <img src="img/weather_icons/mini_double_cloud.svg" alt="">
                         </span>
                         25°
                     </li>  
